--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Ibarra Real Nova", serif;
+}
 
 .random-container {
   white-space: pre-line;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.title {
+  font-size: 1.15rem;
+  font-style: italic;
+  color: rgb(103, 103, 103);
+}
+
+.author {
+  font-size: 0.85rem;
+  text-transform: uppercase;
+  color: rgb(89, 89, 89);
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: end;
+  margin-top: 1rem;
 }
