dark theme complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,8 @@
   --background-dark: hsl(0, 0%, 9%);
   --text-100-dark: hsl(44, 44%, 95%);
   --text-300-dark: hsl(0, 0%, 50%);
+
+  --btn-margin: 15px !important;
 }
 
 [data-theme="dark"] {
@@ -25,6 +27,7 @@
   --text-100: hsl(44, 44%, 95%);
   --text-200: hsl(0, 0%, 50%);
   --text-300: hsl(0, 0%, 50%);
+  --btn-margin: -25px;
 }
 
 .header {
@@ -147,13 +150,14 @@ a:hover,
   font-family: "Ibarra Real Nova", serif;
   position: fixed;
   top: 50%;
+  /* transform: translateY(-50%); */
   right: 0;
   cursor: pointer;
   transform: rotate(90deg);
   border: none;
   outline: none;
   background: transparent;
-  padding-top: 10px;
+  padding-top: var(--btn-margin) !important;
   color: var(--text-300);
-  transition: all 0.2s ease;
+  transition: color 0.2s ease;
 }
