--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,7 +19,7 @@
   --text-100-dark: hsl(44, 44%, 95%);
   --text-300-dark: hsl(0, 0%, 50%);
 
-  --btn-margin: 5px !important;
+  --btn-margin: 6px !important;
 }
 
 [data-theme="dark"] {
@@ -27,7 +27,7 @@
   --text-100: hsl(44, 44%, 95%);
   --text-200: hsl(0, 0%, 50%);
   --text-300: hsl(0, 0%, 50%);
-  --btn-margin: -3px;
+  --btn-margin: -2px;
 }
 
 .header {
@@ -128,6 +128,8 @@ option {
 .docs-link {
   position: fixed;
   top: 50%;
+  transform: translate(-50%, 0%);
+  -ms-transform: translateY(-50%);
   left: 0;
   transform: rotate(270deg);
 }
@@ -151,6 +153,7 @@ a:hover,
   position: fixed;
   top: 50%;
   transform: translate(-50%, 0%);
+  -ms-transform: translateY(-50%);
   right: var(--btn-margin);
   cursor: pointer;
   transform: rotate(90deg);
