--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,10 +30,6 @@
   --btn-margin: -1px;
 }
 
-.header {
-  height: 25vh;
-  width: 100vw;
-}
 .container,
 .add-poem-container {
   width: 100%;
@@ -52,10 +48,18 @@
   gap: 1rem;
   width: fit-content;
   /* max-width: 500px; */
-  padding-bottom: 10rem;
+
   color: var(--text-100);
 }
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.padded {
+  padding: 20vh 0;
+}
 .title {
   font-size: 1.15rem;
   /* font-style: italic; */
@@ -165,4 +169,11 @@ a:hover,
   /* padding-top: var(--btn-margin) !important; */
   color: var(--text-300);
   transition: color 0.2s ease;
+}
+
+@media (max-width: 500px) {
+  .random-container {
+    max-width: 75vw;
+    /* padding-right: 35px; */
+  }
 }
