--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,7 +52,8 @@
   color: var(--text-100);
 }
 .flex,
-.docs-container {
+.docs-container,
+.add-poem-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -63,8 +64,6 @@
 }
 .title {
   font-size: 1.15rem;
-  /* font-style: italic; */
-
   font-weight: 600;
 }
 
@@ -98,9 +97,9 @@
 input,
 textarea,
 select {
-  padding: 5px 10px;
+  padding: 10px 20px;
   border-radius: 5px;
-  border: 1px solid var(--text-200);
+  border: 1px solid var(--text-300);
   outline: none;
   color: var(--text-100);
 }
@@ -111,16 +110,18 @@ textarea {
 }
 
 .submit-btn {
+  border: none;
+  color: var(--background);
   float: right;
   width: 200px;
-  padding: 5px 10px;
+  padding: 10px 20px;
   background: var(--text-100);
   outline: none;
-  border: 1px solid var(--text-100);
   border-radius: 5px;
-
   cursor: pointer;
+  opacity: 0.85;
   transition: all 0.2s ease;
+  text-transform: capitalize;
 }
 
 select,
@@ -129,7 +130,7 @@ option {
 }
 
 .submit-btn:hover {
-  background: salmon;
+  opacity: 1;
 }
 
 .docs-link {
